se agrego modificacion en el trabajo Reto -landing, lo que tiene que ver con informacion-secundaria , informacion-terciaria

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,8 @@
     --Pink: hsl(322, 100%, 66%);
     --Light-Pink: hsl(321, 100%, 78%);
     --Light-Red: hsl(0, 100%, 63%);
-
+    --Very-Dark-Cyan: hsl(192, 100%, 9%);
+    --Very-Pale-Blue: hsl(207, 100%, 98%);
 }
 
 *{
@@ -12,7 +13,7 @@
 }
 
 body{
-    
+
 }
 
 nav{
@@ -47,6 +48,7 @@ nav>.boton-inicio{
     padding: 2rem 0;
 }
 
+
 #informacion-principal>p{
     width: 55vh;
     padding: 0 0 2rem 0;
@@ -58,4 +60,59 @@ nav>.boton-inicio{
     background-color: var(--Pink);
     color: white;
     border-radius: 50px;
+}
+
+#informacion-secundaria{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 2rem;
+    text-align: center;
+    
+}
+
+#informacion-secundaria>article{
+    background-color: var(--Very-Pale-Blue);
+    padding-top: 3rem;
+}
+
+#informacion-secundaria>article>div>img{
+    width: 12.1rem;
+}
+
+#informacion-secundaria>img{
+    width: 14.8rem;
+}
+
+#informacion-secundaria>article>h2{
+    padding-top: 3rem;
+    padding-bottom: 1rem;
+}
+
+#informacion-secundaria>article>p{
+    width: 55vh;
+    padding: 0 1.5rem 3rem 1.5rem;
+
+}
+
+#informacion-terciaria{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 2rem;
+    text-align: center;
+}
+
+#informacion-terciaria>div>img{
+    width: 12.1rem;
+}
+
+#informacion-terciaria>h2{
+    padding-top: 3rem;
+    padding-bottom: 1rem;
+}
+
+#informacion-terciaria>p {
+    width: 55vh;
+    padding: 0 1.5rem 3rem 1.5rem;
 }
