--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+    background-color: darkgrey;
 }
 
 nav{
@@ -132,14 +133,18 @@ nav>.boton-inicio:hover{
 #informacion-secundaria>article{
     background-color: var(--Very-Pale-Blue);
     padding-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 #informacion-secundaria>article>div>img{
-    width: 12.1rem;
+    width: 86vw;
 }
 
 #informacion-secundaria>img{
-    width: 14.8rem;
+    width: 86vw;
 }
 
 #informacion-secundaria>article>h2{
@@ -148,9 +153,10 @@ nav>.boton-inicio:hover{
 }
 
 #informacion-secundaria>article>p{
-    width: 55vh;
-    padding: 0 1.5rem 3rem 1.5rem;
-
+    
+    width: 18rem;
+    padding-bottom: 3rem;
+      
 }
 
 #informacion-terciaria{
@@ -171,8 +177,9 @@ nav>.boton-inicio:hover{
 }
 
 #informacion-terciaria>p {
-    width: 55vh;
-    padding: 0 1.5rem 3rem 1.5rem;
+    width: 18rem;
+    padding-bottom: 3rem;
+    
 }
 
 
