--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,8 +15,8 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+    background-color: darkgreen;
 }
 
 nav{
@@ -79,9 +79,8 @@ nav>.boton-inicio:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5rem 2rem;
-    text-align: center;
-    
+    padding: 6rem 3rem;
+    text-align:center;
 }
 
 #informacion-secundaria>article{
@@ -91,29 +90,31 @@ nav>.boton-inicio:hover{
 
 #informacion-secundaria>article>div>img{
     width: 12.1rem;
+
 }
 
-#informacion-secundaria>img{
-    width: 14.8rem;
+#informacion-secundaria>img {
+    width: 14.8rem; 
 }
 
 #informacion-secundaria>article>h2{
     padding-top: 3rem;
     padding-bottom: 1rem;
+    
 }
 
 #informacion-secundaria>article>p{
     width: 55vh;
     padding: 0 1.5rem 3rem 1.5rem;
+    
+} */
 
-}
-
-#informacion-terciaria{
+/* #informacion-terciaria{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 5rem 2rem;
-    text-align: center;
+    
 }
 
 #informacion-terciaria>div>img{
@@ -128,9 +129,7 @@ nav>.boton-inicio:hover{
 #informacion-terciaria>p {
     width: 55vh;
     padding: 0 1.5rem 3rem 1.5rem;
-#informacion-principal>.boton:hover{
-    cursor: pointer;
-}
+#informacion-principal>.boton:hover{ cursor: pointer; }
 
 #informacion-principal>div>img{
     width: 70vw;
@@ -190,6 +189,68 @@ nav>.boton-inicio:hover{
         padding: 1rem 6rem;
     }
 
+    #informacion-secundaria{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 6rem 3rem;
+        
+    }
+    
+    #informacion-secundaria>article{
+        background-color: var(--Very-Pale-Blue);
+        padding-top: 3rem;
+    }
+    
+    #informacion-secundaria>article>div>img{
+        width: 25rem;
+        float:right;
+        padding:0rem 5rem 0 5rem
+    }
+    
+    #informacion-secundaria>img {
+        width: 50rem; 
+    }
+    
+    #informacion-secundaria>article>h2{
+        padding-top: 4rem;
+        padding-bottom: 1rem;
+        text-align: center
+    }
+    
+    #informacion-secundaria>article>p{
+        width: 80vh;
+        padding: 0 1.5rem 3rem 1.5rem;
+        text-align: center
+    }
+
+
+    #informacion-terciaria{
+        display: flex;
+        flex-direction: column;
+        padding: 5rem 2rem;
+        
+    }
+    
+    #informacion-terciaria>div>img{
+        width: 30rem; 
+
+    }
+    
+    #informacion-terciaria>h2{
+        float:right;
+    }
+    
+    #informacion-terciaria>p {
+        width: 80vh;
+        padding: 0 1.5rem 3rem 1.5rem;
+        float:right;
+    #informacion-principal>.boton:hover{ cursor: pointer; }
+
+
+
+
+
     #datos-informacion{
         display: flex;
         justify-content: space-around;
@@ -201,4 +262,15 @@ nav>.boton-inicio:hover{
         width: 3rem;
         left: 1vw ;
     }
+
+    #informacion-secundaria{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5rem 2rem;
+        text-align: center; 
+    }
+    
 }
+
+
